--- a/vadginger-alpha/app/views/VadGingerUsers/_form.html
+++ b/vadginger-alpha/app/views/VadGingerUsers/_form.html
@@ -1,6 +1,6 @@
 
  <div class="row">
-  <div class="label">User ID</div>
+  <div class="label">Gebruikersnaam</div>
   <div class="field">
     
     
@@ -20,7 +20,7 @@
 
 
  <div class="row">
-  <div class="label">First Name</div>
+  <div class="label">Voornaam</div>
   <div class="field">
     
     
@@ -40,7 +40,7 @@
 
 
  <div class="row">
-  <div class="label">Last Name</div>
+  <div class="label">Familienaam</div>
   <div class="field">
     
     
@@ -60,7 +60,7 @@
 
 
  <div class="row">
-  <div class="label">Email Address</div>
+  <div class="label">Email</div>
   <div class="field">
     
     
@@ -80,7 +80,7 @@
 
 
  <div class="row">
-  <div class="label">Role</div>
+  <div class="label">Rol</div>
   <div class="field">
     
     
