--- a/vadginger-alpha/app/views/ActivityTargetss/edit.html
+++ b/vadginger-alpha/app/views/ActivityTargetss/edit.html
@@ -5,7 +5,8 @@
 <div class="entity">
 #{form @ActivityTargetss.update(), id:'createForm'}
 	#{include 'ActivityTargetss/_form.html' /}
-	<input type="submit" name="submit" value="Save" />
+	<button class="submit ui-corner-all" onclick="this.submit()">Opslaan</button>
+  <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
 
