--- a/vadginger-alpha/app/views/Organisatiess/edit.html
+++ b/vadginger-alpha/app/views/Organisatiess/edit.html
@@ -1,12 +1,12 @@
 #{extends 'main.html' /}
 
-<h2>Edit Organisaties</h2>
+<h2>Organisatie aanpassen</h2>
 
 <div class="entity">
 #{form @Organisatiess.update(), id:'createForm'}
 	#{include 'Organisatiess/_form.html' /}
-	<input type="submit" name="submit" value="Save" />
+	<button class="submit ui-corner-all" onclick="this.submit()">Opslaan</button>
+  <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
 
-<a href="@{Organisatiess.index}">Cancel</a>
