--- a/vadginger-alpha/app/views/VadGingerUsers/edit.html
+++ b/vadginger-alpha/app/views/VadGingerUsers/edit.html
@@ -1,12 +1,12 @@
 #{extends 'main.html' /}
 
-<h2>Edit VadGingerUser</h2>
+<h2>Gebruiker aanpassen</h2>
 
 <div class="entity">
 #{form @VadGingerUsers.update(), id:'createForm'}
 	#{include 'VadGingerUsers/_form.html' /}
-	<input type="submit" name="submit" value="Save" />
+  <button class="submit ui-corner-all" onclick="this.submit()">Opslaan</button>
+  <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
 
-<a href="@{VadGingerUsers.index}">Cancel</a>
