--- a/vadginger-alpha/app/views/Activities/show.html
+++ b/vadginger-alpha/app/views/Activities/show.html
@@ -43,8 +43,85 @@
 		<span class="value">
       ${entity.evaluvated}
 		</span>
+		#{if entity.evaluvated}
+			#{list items:aes, as:'ae'}
+			<BR><span class="elem"$>Eval Type </span>: ${ae.evalTypeId}
+			<BR><span class="elem"$>Evaluvators </span>${ae.evaluvatorsId}
+			#{/list}
+		#{/if}
+	</div>
+	
+	<div class="row">
+		<span class="elem">
+			Items:
+		</span>
+		<span class="value">
+		<ul>
+		<li>
+     		#{list items:iia, as:'ia'}
+			<span class="elem">${ia.itemId} </span>
+			
+			#{/list}
+		</li>
+		</ul>
+		</span>
+	</div>
+	
+	<div class="row">
+		<span class="elem">
+			Materials:
+		</span>
+		<span class="value">
+		<ul>
+		<li>
+     		#{list items:mia, as:'ia'}
+			<span class="elem">${ia.materialId} </span>
+			
+			#{/list}
+		</li>
+		</ul>
+		</span>
 	</div>
   
+  <div class="row">
+		<span class="elem">
+			Sectors:
+		</span>
+		<span class="value">
+		<ul>
+		<li>
+     		#{list items:asc, as:'ia'}
+     		#{if ia.sectorId.ouder!=null} 
+     		<span class="elem">${ia.sectorId.ouder} </span>
+     		#{/if}
+     		<ul><li>
+			<span class="elem">${ia.sectorId} </span>
+			</li></ul>
+			#{/list}
+		</li>
+		</ul>
+		</span>
+	</div>
+	
+	 <div class="row">
+		<span class="elem">
+			Activity Type:
+		</span>
+		<span class="value">
+		<ul>
+		<li>
+     		#{list items:atj, as:'ia'}
+     		#{if ia.activityTypeId.ouder!=null} 
+     		<span class="elem">${ia.activityTypeId.ouder} </span>
+     		#{/if}
+     		<ul><li>
+			<span class="elem">${ia.activityTypeId} </span>
+			</li></ul>
+			#{/list}
+		</li>
+		</ul>
+		</span>
+	</div>
 
   
 	<div class="row">
@@ -54,6 +131,7 @@
 		<span class="value">
       ${entity.internalActivity}
 		</span>
+		
 	</div>
   
 
@@ -65,8 +143,25 @@
 		<span class="value">
       ${entity.reported}
 		</span>
+		
 	</div>
   
+  <div class="row">
+  <span class="elem">
+  Activity Target
+  <span class="value">
+		<ul>
+		<li>
+     		#{list items:ats, as:'ia'}
+     		<ul><li>
+			<span class="elem">${ia.attendantTypeId.targetTypeId} </span> :${ia.attendantTypeId} 
+			</li></ul>
+			#{/list}
+		</li>
+		</ul>
+		</span>
+  </span>
+  </div>
 
   
 	<div class="row">
