--- a/vadginger-alpha/app/views/VadGingerUsers/_form.html
+++ b/vadginger-alpha/app/views/VadGingerUsers/_form.html
@@ -92,6 +92,9 @@
         
           <option value="ADMIN" 
             ${(entity?.role?.name() == 'ADMIN') ? 'selected':''}>ADMIN</option>
+            
+            <option value="ORG_ADMIN" 
+            ${(entity?.role?.name() == 'ORG_ADMIN') ? 'selected':''}>ORG_ADMIN</option>
         
       </select>
 
