--- a/vadginger-alpha/app/views/main.html
+++ b/vadginger-alpha/app/views/main.html
@@ -58,10 +58,12 @@
           <div><ul>
             <li><a href="@{Statics.usersStart()}">Startpagina</a></li>
             <li><a href="@{Statics.usersData()}">Gebruikersgegevens</a></li>
-            <li><a href="@{VadGingerUsers.index()}">Lijst Gebruikers</a></li>
-            <li><a href="@{VadGingerUsers.create()}">Nieuwe Gebruiker</a></li>
             <li><a href="@{VadGingerUsers.changeEmailIdForm()}">Emailadres wijzigen</a></li>
             <li><a href="@{VadGingerUsers.changePasswordForm()}">Wachtwoord wijzigen</a></li>
+             #{secure.check 'admin'}
+            <li><a href="@{VadGingerUsers.index()}">Lijst Gebruikers</a></li>
+            <li><a href="@{VadGingerUsers.create()}">Nieuwe Gebruiker</a></li>
+            #{/secure.check}
             <li>
               #{if session.get("username") == null}
               <a href="/secure/login">Login</a>
@@ -78,13 +80,29 @@
             <li><a href="@{Activities.searchForm()}">Filter Activiteiten</a></li>
             <li><a href="@{Activities.create()}">Nieuwe Activiteit</a></li>
           </ul></div>
+          #{secure.check 'admin'}
           <h3><a href="#">Organisaties</a></h3>
           <div><ul>
             <li><a href="@{Statics.organisationsStart()}">Startpagina</a></li>
             <li><a href="@{Organisatiess.index()}">Lijst organisaties</a></li>
             <li><a href="@{Organisatiess.subOrgIndex()}">Lijst sub-organisaties</a></li>
+            <li><a href="@{OrgUserJunctions.index()}">Lijst Org-User_Mapping</a></li>
+            <li><a href="@{OrgUserJunctions.create()}">Nieuwe Org-User_Mapping</a></li>
             <li><a href="@{Locationss.clustersIndex()}">Lijst regionale clusters</a></li>
           </ul></div>
+          #{/secure.check}
+          #{secure.check 'org_admin'}
+          <h3><a href="#">Organisaties</a></h3>
+          <div><ul>
+            <li><a href="@{Statics.organisationsStart()}">Startpagina</a></li>
+            <li><a href="@{Organisatiess.index()}">Lijst organisaties</a></li>
+            <li><a href="@{Organisatiess.subOrgIndex()}">Lijst sub-organisaties</a></li>
+            <li><a href="@{OrgUserJunctions.index()}">Lijst Org-User_Mapping</a></li>
+            <li><a href="@{OrgUserJunctions.create()}">Nieuwe Org-User_Mapping</a></li>
+            <li><a href="@{Locationss.clustersIndex()}">Lijst regionale clusters</a></li>
+          </ul></div>
+          #{/secure.check}
+            #{secure.check 'admin'}
           <h3><a href="#">Administratie</a></h3>
           <div><ul>
             <li>Organisaties (<a href="@{Organisatiess.index()}">Lijst</a> / <a href="@{Organisatiess.create()}">Nieuw</a>)</li>
@@ -102,6 +120,7 @@
             <li>Materialen (<a href="@{Materialss.index()}">Lijst</a> / <a href="@{Materialss.create()}">Nieuw</a>)</li>
             <li></li>
           </ul></div>
+            #{/secure.check}
       </div>
       <div id="after-accordion" class="ui-accordion ui-widget ui-helper-reset ui-accordion-icons">
         <h3 class="ui-accordion-header ui-helper-reset ui-state-default ui-corner-all" role="tab" aria-expanded="false" aria-selected="false" tabindex="-1">
