--- a/vadginger-alpha/app/views/Activities/searchForm.html
+++ b/vadginger-alpha/app/views/Activities/searchForm.html
@@ -24,9 +24,32 @@
   <div class="field">
         <select name="org_id" id="organizationSelect">
           <option value="">(Niet van toepassing)</option>
-          %{ models.Organisaties.find("ouder is null").fetch().sort{ it.toString() }.each() { }%
-            <option value="${it?.id}">${it}</option>
-          %{ } }%
+          #{if models.VadGingerUser.find("id is " + session.get("userId")).first().role.name().equalsIgnoreCase("org_admin") }
+             
+        %{ models.OrgUserJunction.find("userId is ${session.get("userId")}").fetch().sort{ it.toString() }.each() { }%
+          
+          %{
+            selected = false;
+            if (entity?.organizationId?.id == it.orgId.id) {
+              selected = true
+            }
+          }%
+          <option value="${it?.orgId.id}" ${selected ? 'selected'.raw() : ''}>${it.orgId}</option>
+        %{ } }%
+        #{/if}
+        #{else}
+             
+        %{ models.Organisaties.all().fetch().sort{ it.toString() }.each() { }%
+          
+          %{
+            selected = false;
+            if (entity?.organizationId?.id == it.id) {
+              selected = true
+            }
+          }%
+          <option value="${it?.id}" ${selected ? 'selected'.raw() : ''}>${it}</option>
+        %{ } }%
+        #{/else}
         </select>
   </div>
    <div class="field" id="hiddenOrg"> </div>
